--- a/locales/en.json
+++ b/locales/en.json
@@ -1,8 +1,7 @@
 {
   "Hero": {
-    "title1": "Ship",
-    "title2": "Landing Page",
-    "title3": "Fast",
+    "title1": "Power",
+    "title2": "Kit",
     "description": "A free, open-source, and powerful landing page boilerplate, ideal for various projects, enabling you to create a landing page in under an hour."
   },
   "SocialProof": {
