--- a/locales/zh.json
+++ b/locales/zh.json
@@ -1,7 +1,7 @@
 {
   "Hero": {
-    "title1": "快速构建",
-    "title2": "落地页",
+    "title1": "Power",
+    "title2": "Kit",
     "title3": "",
     "description": "一个免费、开源且强大的落地页模板，适用于各种项目，让你在一个小时内搭建落地页。"
   },
