--- a/locales/en.json
+++ b/locales/en.json
@@ -17,7 +17,7 @@
   "Pricing": {
     "title": "Pricing",
     "title2": "Get unlimited access.",
-    "description": "The page you are currently viewing is an open-source, free boilerplate.",
+    "description": "ChatGPT Powerkit helps you organize, write, and work faster—backed by regular updates and ongoing improvements.",
     "doYouLike": "Do you like this landing page boilerplate?",
     "follow": "Follow my Twitter."
   },
