--- a/locales/zh.json
+++ b/locales/zh.json
@@ -18,7 +18,7 @@
   "Pricing": {
     "title": "定价",
     "title2": "拥有无限访问权限",
-    "description": "你当前查看的页面是一个开源的、免费的模板。",
+    "description": "ChatGPT Powerkit 幫助你更快整理、更順寫作，並持續更新與優化。",
     "doYouLike": "你喜欢这个落地页模板吗？",
     "follow": "关注我的推特。"
   },
