--- a/locales/en.json
+++ b/locales/en.json
@@ -32,13 +32,8 @@
     "description": "Here are some of the most frequently asked questions."
   },
   "CTA": {
-    "title": "Build Your Landing Page Now",
-    "description1": "Build",
-    "description2": "your landing page,",
-    "description3": "show",
-    "description4": "your product, and",
-    "description5": "start earning",
-    "description6": "!"
+    "title": "Supercharge Your ChatGPT Workflow",
+    "description1": "Organize, export, and write smarter — all in one powerful extension built for power users."
   },
   "CTAButton": {
     "title": "Get Chatgpt Powerkit"
