--- a/locales/zh.json
+++ b/locales/zh.json
@@ -33,13 +33,8 @@
     "description": "这里有一些最常见的问题。"
   },
   "CTA": {
-    "title": "立即构建你的落地页",
-    "description1": "构建",
-    "description2": "你的落地页，",
-    "description3": "展示",
-    "description4": "你的产品，并开始",
-    "description5": "赚取收入",
-    "description6": "！"
+    "title": "全面升級你的 ChatGPT 工作流程",
+    "description1": "整理、匯出、輸入加速，專為進階用戶打造的一站式強化工具。"
   },
   "CTAButton": {
     "title": "Get Chatgpt Powerkit"
