--- a/locales/zh.json
+++ b/locales/zh.json
@@ -16,8 +16,8 @@
     "title": "Feature"
   },
   "Pricing": {
-    "title": "定价",
-    "title2": "拥有无限访问权限",
+    "title": "定價",
+    "title2": "擁有無限訪問權限",
     "description": "ChatGPT Powerkit 幫助你更快整理、更順寫作，並持續更新與優化。",
     "doYouLike": "你喜欢这个落地页模板吗？",
     "follow": "关注我的推特。"
@@ -30,7 +30,7 @@
   },
   "FAQ": {
     "title": "FAQs",
-    "description": "这里有一些最常见的问题。"
+    "description": "這裡有一些最常見的問題。"
   },
   "CTA": {
     "title": "全面升級你的 ChatGPT 工作流程",
