名稱改為 AI Chat Powerkit

--- a/locales/en.json
+++ b/locales/en.json
@@ -17,7 +17,7 @@
   "Pricing": {
     "title": "Pricing",
     "title2": "Get unlimited access.",
-    "description": "ChatGPT Powerkit helps you organize, write, and work faster—backed by regular updates and ongoing improvements.",
+    "description": "AI Chat Powerkit helps you organize, write, and work faster—backed by regular updates and ongoing improvements.",
     "doYouLike": "Do you like this landing page boilerplate?",
     "follow": "Follow my Twitter."
   },
@@ -36,6 +36,6 @@
     "description1": "Organize, export, and write smarter — all in one powerful extension built for power users."
   },
   "CTAButton": {
-    "title": "Get ChatGPT Powerkit"
+    "title": "Get AI Chat Powerkit"
   }
 }
