--- a/locales/zh.json
+++ b/locales/zh.json
@@ -18,7 +18,7 @@
   "Pricing": {
     "title": "定價",
     "title2": "擁有無限訪問權限",
-    "description": "ChatGPT Powerkit 幫助你更快整理、更順寫作，並持續更新與優化。",
+    "description": "AI Chat Powerkit 幫助你更快整理、更順寫作，並持續更新與優化。",
     "doYouLike": "你喜欢这个落地页模板吗？",
     "follow": "关注我的推特。"
   },
@@ -37,6 +37,6 @@
     "description1": "整理、匯出、輸入加速，專為進階用戶打造的一站式強化工具。"
   },
   "CTAButton": {
-    "title": "Get ChatGPT Powerkit"
+    "title": "Get AI Chat Powerkit"
   }
 }
