改為 AI Chat Powerkit

--- a/locales/zh.json
+++ b/locales/zh.json
@@ -1,6 +1,6 @@
 {
   "Hero": {
-    "title1": "ChatGPT",
+    "title1": "AI Chat",
     "title2": "PowerKit",
     "title3": "",
     "description": "Organize chats with folders, bulk delete/export, use Vim keys & text expansion. The ultimate toolbox for power users."
